tests/errors/semantic/blocking/IMPORTING_EXISTING_IDENTIFIED.py
numpy = 3

import numpy

x = numpy.ones(3)
